# zdaq

./: CMake.defs  CMakeLists.txt  README.md  SConscript  SConstruct  docker_zdaq_install.sh
builder/: CMakeLists.txt
builder/include/: localCollector.hh
builder/src/: builder.cc  localCollector.cc
dock_scripts/: zdaq_build.sh  zdaq_pi_build.sh
docs/: Doxyfile
etc/: Log4cxxConfig.xml  difdim.cfg  ljc.conf  ljc.service  ljcd.sh  lsc.service  lscd.sh  mystartup.sh  zdaq.bashrc
etc/rsyslog/client/: centralize.conf
etc/rsyslog/server/: log.ipnl.in2p3.fr.conf
example/: CMakeLists.txt  SConscript
example/etc/: daq_example.json  deploy.sh  ljc.conf
example/include/: exBuilder.hh  exRunControl.hh  exServer.hh  softTrigger.hh
example/scripts/: daqcontrol.py  runcmd.py  runcontrol.py
example/src/: exBuilder.cc  exBuilder.cxx  exRunControl.cc  exRunControl.cxx  exServer.cc  exServer.cxx  softTrigger.cc  softTrigger.cxx
extras/: CMakeLists.txt  mongoose.install  zmq.install  zmq.install.buster
include/: baseApplication.hh  binarywriter.hh  dummywriter.hh  fileTailer.hh  fsm.hh  fsmjob.hh  fsmmessage.hh  fsmweb.hh  fsmwebCaller.hh  monitorApplication.hh  pluginUtil.hh  zPublisher.hh  zSubscriber.hh  zdaqLogger.hh  zmBuffer.hh  zmMerger.hh  zmPublisher.hh  zmPuller.hh  zmPusher.hh  zmRouter.hh  zmSender.hh  zmonPlugin.hh  zmonStore.hh
monitoring/: SConscript  SConstruct
monitoring/daemon/: CMakeLists.txt  SConscript
monitoring/daemon/etc/: lsc.conf
monitoring/daemon/include/: lsc.hh
monitoring/daemon/src/: lsc.cxx  lscm.cc
monitoring/include/: zmonSupervisor.hh
monitoring/src/: supervisor.cc  zmonSupervisor.cxx
scripts/: MongoJob.py  jobdaemon  mgjob  slowdaemon  zrcdaq.py  zrcfsm.py
src/: baseApplication.cc  fileTailer.cc  fsm.cc  fsmjob.cc  fsmmessage.cc  fsmweb.cc  fsmwebCaller.cc  mpubbuilder.cpp  mpubcollector.cpp  mpubserver.cpp  testfsm.cpp  zPublisher.cc  zSubscriber.cc  zmMerger.cc  zmPublisher.cc  zmPuller.cc  zmPusher.cc  zmRouter.cc  zmSender.cc
src/pluggins/: CMakeLists.txt  binarywriter.cc  dummywriter.cc
src/utils/: ljc.cxx  testbuilder.cpp
